--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+*.log
+*.pot
+*.pyc
+*.pc
+*.pyo
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
 .DS_Store
 .env
-*.pc
-*.pyc
-*.pyo
-__pycache__
 ._*
 .Trashes
-.idea
+
